camera follow commit

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <canvas id="canvas"></canvas>
+    <div id="tracer"></div>
 
     <!-- <img src="./assets/images/robotSprites/RobotMovement/idle.png" alt=""> -->
     <script src="./assets/js/app.js"></script>
