--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <canvas id="canvas"></canvas>
     <div id="tracer"></div>
 
-    <!-- <img src="./assets/images/robotSprites/RobotMovement/idle.png" alt=""> -->
+    <img src="./assets/sounds/Clank.wav" alt="">
     <script src="./assets/js/app.js"></script>
 </body>
 </html>
