--- a/index.html
+++ b/index.html
@@ -10,7 +10,16 @@
     <canvas id="canvas"></canvas>
     <div id="tracer"></div>
 
-    <img src="./assets/sounds/Clank.wav" alt="">
+    <div class="controls">
+        <div class="left"><img src="./assets/images/arrows/left.png" alt=""></div>
+        <div class= "left-right">
+            <div class="up"><img src="./assets/images/arrows/up.png" alt=""></div>
+            <div class="break"><img src="./assets/images/arrows/break.png" alt=""></div>
+            <div class="down"><img src="./assets/images/arrows/down.png" alt=""></div>
+        </div>
+        <div class="right"><img src="./assets/images/arrows/right.png" alt=""></div>
+    </div>
+    <!-- <img src="./assets/sounds/Clank.wav" alt=""> -->
     <script src="./assets/js/app.js"></script>
 </body>
 </html>
