Added game Links

--- a/index.html
+++ b/index.html
@@ -18,6 +18,24 @@
         </div>
         <div class="right"><img src="./assets/images/arrows/right.png" alt=""></div>
     </div>
+
+
+    <div class="card">
+        <h5>Fight Club</h5>
+        <div> <span>.</span> <span>.</span> <span>.</span> </div>
+        <div class="card-content-wrapp">
+            <a target="_blank" href="https://borilvtodorov.github.io/boriltodorov.github.io/6-BlackJack/BlackJack.html" class="card-img-holder"> <img class="card-img" src="./assets/images/otherProjectsImages/BlackJack.PNG" alt=""> </a>
+            <div class="card-text-holder"> 
+              BlackJack <br>
+              Place your bet and play the dealer<br>
+              <br>
+              -----------------------------<br>
+              Build with HTML Canvas,JS
+                
+                
+            </div>
+        </div>
+    </div>
     <!-- <img src="./assets/sounds/Clank.wav" alt=""> -->
     <script src="./assets/js/app.js"></script>
 </body>
