--- a/index.html
+++ b/index.html
@@ -1,42 +1,58 @@
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="./assets/style/style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="./assets/style/style.css" />
+  </head>
+  <body>
     <canvas id="canvas"></canvas>
     <div id="tracer"></div>
     <div class="controls">
-        <div class="left"><img src="./assets/images/arrows/left.png" alt=""></div>
-        <div class= "left-right">
-            <div class="up"><img src="./assets/images/arrows/up.png" alt=""></div>
-            <div class="break"><img src="./assets/images/arrows/break.png" alt=""></div>
-            <div class="down"><img src="./assets/images/arrows/down.png" alt=""></div>
+      <div class="left">
+        <img src="./assets/images/arrows/left.png" alt="" />
+      </div>
+      <div class="left-right">
+        <div class="up"><img src="./assets/images/arrows/up.png" alt="" /></div>
+        <div class="break">
+          <img src="./assets/images/arrows/break.png" alt="" />
         </div>
-        <div class="right"><img src="./assets/images/arrows/right.png" alt=""></div>
+        <div class="down">
+          <img src="./assets/images/arrows/down.png" alt="" />
+        </div>
+      </div>
+      <div class="right">
+        <img src="./assets/images/arrows/right.png" alt="" />
+      </div>
     </div>
 
-
     <div class="card">
-        <h5>Fight Club</h5>
-        <div> <span>.</span> <span>.</span> <span>.</span> </div>
-        <div class="card-content-wrapp">
-            <a target="_blank" href="https://borilvtodorov.github.io/boriltodorov.github.io/6-BlackJack/BlackJack.html" class="card-img-holder"> <img class="card-img" src="./assets/images/otherProjectsImages/BlackJack.PNG" alt=""> </a>
-            <div class="card-text-holder"> 
-              BlackJack <br>
-              Place your bet and play the dealer<br>
-              <br>
-              -----------------------------<br>
-              Build with HTML Canvas,JS
-                
-                
-            </div>
+      <h5>Fight Club</h5>
+      <div><span>.</span> <span>.</span> <span>.</span></div>
+      <div class="card-content-wrapp">
+        <a
+          target="_blank"
+          href="https://borilvtodorov.github.io/boriltodorov.github.io/6-BlackJack/BlackJack.html"
+        >
+          <div class="card-img-holder">
+            <img
+              class="card-img"
+              src="./assets/images/otherProjectsImages/DesignWork1.PNG"
+              alt=""
+            />
+          </div>
+        </a>
+        <div class="card-text-holder">
+          BlackJack <br />
+          Place your bet and play the dealer<br />
+          <br />
+          -----------------------------<br />
+          Build with HTML Canvas,JS
         </div>
+      </div>
     </div>
     <!-- <img src="./assets/sounds/Clank.wav" alt=""> -->
     <script src="./assets/js/app.js"></script>
-</body>
+  </body>
 </html>
